plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'com.google.cloud.tools.jib' version '3.4.4'
}

jib.container.ports = [ "8082" ]
jib.container.volumes = [ "/root/monocator/" ]
jib.container.environment = [ "SPRING_PROFILES_ACTIVE" : "docker" ]
jib.from.image = "eclipse-temurin:23.0.1_11-jre-ubi9-minimal@sha256:f2521f4f7cf25f1259e5db99cda2a6a676f44c68cc452cd1cc0bbeb3f72c06f8"
jib.from.platforms {
    platform {
        architecture = 'amd64'
        os = 'linux'
    }
    platform {
        architecture = 'arm64'
        os = 'linux'
    }
}
jib.to.image = 'maartenbosteels/monocator'
jib.to.auth.username=providers.gradleProperty("DOCKERHUB_USERNAME").getOrElse("fail")
jib.to.auth.password=providers.gradleProperty("DOCKERHUB_PASSWORD").getOrElse("fail")

// Spring Boot 3.4.0 expected to land on November 21 2024
// https://github.com/spring-projects/spring-boot/milestone/353

group = 'eu.bosteels'
version = '0.0.2-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs(['-XX:+EnableDynamicAgentLoading', '-Xshare:off'])
}

repositories {
    mavenCentral()
//    maven { url 'https://repo.spring.io/milestone' }
//    maven { url 'https://repo.spring.io/snapshot' }
    gradlePluginPortal()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-amqp'

    implementation group: 'org.springframework', name: 'spring-jdbc', version: '6.1.11'

    implementation 'org.springframework.boot:spring-boot-starter-web'

    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
    implementation("org.springframework.boot:spring-boot-starter-thymeleaf")

    // see  https://devhub.checkmarx.com/cve-details/Cx78f40514-81ff/
    // implementation("commons-collections:commons-collections:4.3")

    // see https://devhub.checkmarx.com/cve-details/CVE-2024-29133/
    implementation("org.apache.commons:commons-configuration2:2.10.1") {
        exclude group: 'commons-logging', module: 'commons-logging'
    }

    // We use an embedded ActiveMQ Artemis when we are not using SQS
    // A background job fetches work from duckdb and puts it on Artemis queue
    // where a JmsListener will consume it with configurable concurrency.
    // Very similar to how we do it for SQS
    implementation 'org.springframework.boot:spring-boot-starter-artemis'

    implementation 'org.springframework.boot:spring-boot-starter-json'
    runtimeOnly 'org.apache.activemq:artemis-jakarta-server'


    // https://mvnrepository.com/artifact/com.maciejwalkowiak.spring/wiremock-spring-boot
    implementation group: 'com.maciejwalkowiak.spring', name: 'wiremock-spring-boot', version: '2.1.3'

    // https://mvnrepository.com/artifact/org.mock-server/mockserver-junit-jupiter
    testImplementation group: 'org.mock-server', name: 'mockserver-junit-jupiter', version: '5.15.0'

    // mockserver-junit-jupiter pulls in vulnerable version 2.9.0
    testImplementation 'org.xmlunit:xmlunit-core:2.10.0'

    // https://mvnrepository.com/artifact/org.testcontainers/testcontainers
    testImplementation group: 'org.testcontainers', name: 'testcontainers', version: '1.20.3'
    // https://mvnrepository.com/artifact/org.testcontainers/junit-jupiter
    testImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: '1.20.3'

    // https://mvnrepository.com/artifact/org.aspectj/aspectjrt
    runtimeOnly group: 'org.aspectj', name: 'aspectjrt', version: '1.9.22.1'

// https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
    runtimeOnly group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.22.1'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // artemis-jakarta-client:2.33.0 pulls in vulnerable version 1.77
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78'

    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.37.2'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    testImplementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    // https://mvnrepository.com/artifact/org.webjars/webjars-locator
    implementation 'org.webjars:webjars-locator:0.52'

    // https://mvnrepository.com/artifact/org.webjars.npm/htmx.org
    implementation 'org.webjars.npm:htmx.org:2.0.2'

    // https://mvnrepository.com/artifact/io.github.wimdeblauwe/htmx-spring-boot-thymeleaf
    implementation 'io.github.wimdeblauwe:htmx-spring-boot-thymeleaf:3.4.1'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


    // to avoid warning: unknown enum constant ImplementationVisibility.PUBLIC
    // reason: class file for org.immutables.value.Value$Style$ImplementationVisibility not found
    // https://mvnrepository.com/artifact/org.immutables/value
    compileOnly group: 'org.immutables', name: 'value', version: '2.10.1'

    // https://mvnrepository.com/artifact/io.micrometer/micrometer-core
    implementation group: 'io.micrometer', name: 'micrometer-core', version: '1.13.6'

    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // https://mvnrepository.com/artifact/io.micrometer/micrometer-registry-influx
    // runtimeOnly group: 'io.micrometer', name: 'micrometer-registry-influx', version: '1.13.6'

    // https://mvnrepository.com/artifact/commons-codec/commons-codec
    // For now we only use it for encoding byte arrays to Hexadecimal strings
    // (use this instead of bouncycastle which is 15x bigger)
    implementation group: 'commons-codec', name: 'commons-codec', version: '1.17.1'

    // https://mvnrepository.com/artifact/commons-net/commons-net
    implementation group: 'commons-net', name: 'commons-net', version: '3.11.1'

    // https://mvnrepository.com/artifact/com.github.seancfoley/ipaddress
    implementation group: 'com.github.seancfoley', name: 'ipaddress', version: '5.4.1'

    // https://mvnrepository.com/artifact/org.jsoup/jsoup
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.3'

    // https://mvnrepository.com/artifact/com.maxmind.geoip2/geoip2
    implementation group: 'com.maxmind.geoip2', name: 'geoip2', version: '4.2.0'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-compress
    implementation 'org.apache.commons:commons-compress:1.26.0'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3'

    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '33.2.1-jre'

    implementation 'org.apache.poi:poi:5.2.2'

    implementation 'org.apache.commons:commons-text:1.10.0'

    implementation group: 'org.duckdb', name: 'duckdb_jdbc', version: '1.1.2'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-rng-simple
    implementation group: 'org.apache.commons', name: 'commons-rng-simple', version: '1.5'

    // https://mvnrepository.com/artifact/com.github.tomakehurst/wiremock
    // testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '3.0.1'
    // testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '3.0.3'
    // testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'

    // https://mvnrepository.com/artifact/com.github.tomakehurst/wiremock-jre8-standalone
    testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8-standalone', version: '2.35.2'

    // https://mvnrepository.com/artifact/org.wiremock/wiremock
    // testImplementation group: 'org.wiremock', name: 'wiremock', version: '3.8.0'

    implementation group: 'com.github.f4b6a3', name: 'ulid-creator', version: '5.2.3'

    // https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5
    implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.3.1'

    // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.12.0'

    // https://mvnrepository.com/artifact/io.netty/netty-transport
    implementation group: 'io.netty', name: 'netty-transport', version: '4.1.111.Final'
    implementation group: 'io.netty', name: 'netty-codec', version: '4.1.111.Final'
    implementation group: 'io.netty', name: 'netty-handler', version: '4.1.111.Final'

    // IDN stuff
    // https://mvnrepository.com/artifact/com.ibm.icu/icu4j
    implementation group: 'com.ibm.icu', name: 'icu4j', version: '75.1'

    implementation 'dnsjava:dnsjava:3.6.0'

    // https://mvnrepository.com/artifact/com.hubspot/NioSmtpClient
    implementation 'com.hubspot:NioSmtpClient:1.2.0'

//    implementation 'com.github.pemistahl:lingua:1.1.0'
    implementation 'com.github.pemistahl:lingua:1.2.2'

    testImplementation("com.squareup.okhttp3:mockwebserver:4.10.0")

    // caching
    // used by RateLimiter
    implementation 'com.github.ben-manes.caffeine:caffeine:2.8.2'

}

tasks.named('test') {
    useJUnitPlatform()
}
